force-app/main/default/objects/ssot__HealthcareService__dlm/fields/ssot__IsAppointmentRequired__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAppointmentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Required</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAppointmentRequired</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>