force-app/main/default/objects/ssot__HealthcareService__dlm/fields/ssot__ReferralMethod__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralMethod__c</fullName>
    <label>Referral Method</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralMethod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>