force-app/main/default/objects/ssot__HealthcareService__dlm/fields/ssot__ServiceProvision__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceProvision__c</fullName>
    <label>Service Provision</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceProvision</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>